[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/stage_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game.gd" type="Script" id=2]
[ext_resource path="res://scenes/coin_counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/power_up_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/UI/cross.png" type="Texture" id=5]
[ext_resource path="res://samples/dig_dug_round_clear.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Chocolate Bar Demo.otf"

[sub_resource type="DynamicFont" id=2]
size = 300
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "count"
length = 3.5
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.03739, 2.03326 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "3", "2", "1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.21552 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="game" type="Node"]
script = ExtResource( 2 )

[node name="interface" type="Node2D" parent="."]

[node name="stage_buttons" type="GridContainer" parent="interface"]
margin_left = 473.0
margin_top = 120.0
margin_right = 608.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage_button" parent="interface/stage_buttons" instance=ExtResource( 1 )]
margin_right = 132.0
text = "Stage 01"
music = "res://music/happy.ogg"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="controls" type="Node2D" parent="HUD"]

[node name="power_up_box" parent="HUD/controls" instance=ExtResource( 4 )]
visible = false
position = Vector2( 559, -2 )

[node name="coin_counter" parent="HUD/controls" instance=ExtResource( 3 )]
visible = false

[node name="countdown" type="Node2D" parent="HUD"]
position = Vector2( 960, 540 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="HUD/countdown"]
margin_left = -26.0
margin_top = -159.0
margin_right = 112.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 2 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="HUD/countdown"]
anims/RESET = SubResource( 3 )
anims/count = SubResource( 4 )

[node name="stage_exit" type="TextureButton" parent="HUD"]
margin_left = 1857.0
margin_top = 14.0
margin_right = 1897.0
margin_bottom = 54.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage_victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="music" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="HUD/stage_exit" to="." method="_on_stage_exit_pressed"]
